fixed paths for website

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Super AJR Bros.</title>
 
-<link rel="stylesheet" type="text/css" href="./source/styles.css" />
+<link rel="stylesheet" type="text/css" href="/ajrgame/clients/ajr/templates/splash/ajr/game/source/styles.css" />
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="loadingBar"></div>
 <div id="feedback"></div>
-<img id="bkg" class="hideMe" src="./clients/ajr/templates/splash/ajr/game/source/img/testBKG.png">
+<img id="bkg" class="hideMe" src="/ajrgame/clients/ajr/templates/splash/ajr/game/source/img/testBKG.png">
 <div id="useFont">A</div>
 <div id="loading">
 <div id="loadingInner">
@@ -20,8 +20,8 @@ LOADING
 </div>
 </div>
 <canvas id="mycanvas"></canvas>
-<script type="f2530bfcc65769113a48830b-text/javascript" src="./clients/ajr/templates/splash/ajr/game/source/pixi/pixi.min.js"></script>
-<script id="main" type="f2530bfcc65769113a48830b-module" src="./clients/ajr/templates/splash/ajr/game/source/index.js"></script>
+<script type="f2530bfcc65769113a48830b-text/javascript" src="/ajrgame/clients/ajr/templates/splash/ajr/game/source/pixi/pixi.min.js"></script>
+<script id="main" type="f2530bfcc65769113a48830b-module" src="/ajrgame/clients/ajr/templates/splash/ajr/game/source/index.js"></script>
 <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="f2530bfcc65769113a48830b-|49" defer=""></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"si":10,"rayId":"6451a08a3e39d048","version":"2021.4.0"}'></script>
 </body>
 </html>
